Fixed featured images on mobile

--- a/_sass/figures.scss
+++ b/_sass/figures.scss
@@ -20,5 +20,6 @@ figcaption {
 }
 
 .featured-image {
+  height: auto;
   margin-bottom: 1ex;
 }
